# min-sized-rust-windows

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
rivet-mini/: Cargo.toml
rivet-mini/src/: main.rs  pe.rs
src/: main.rs  types.rs
