[package]
name = "min-sized-rust-windows"
version = "0.1.0"
authors = ["Marvin Countryman <marvinc@siqinc.com>"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies.winapi]
version = "0.3"
features = ["ntdef", "winnt", "dbghelp", "minwindef", "impl-debug"]

[build-dependencies]
iced-x86 = { version = "1.9", default-features = false, features = ["std", "decoder"] }

[build-dependencies.winapi]
version = "0.3"
features = [
  "ntdef",
  "winnt",
  "dbghelp",
  "minwindef",
  "libloaderapi",

  "impl-debug",
]
