[workspace]
members = ["rivet-mini"]

[[bin]]
name = "msrw-unpacked"
path = "./src/main.rs"

[package]
name = "min-sized-rust-windows"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1

[build-dependencies]
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder"] }
